infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: client-depl
spec:
    replicas: 1    #specifies number of pods
    selector:
        matchLabels:
            app: client
    template:
        metadata:
            labels:
                app: client
        spec:
            containers:
                -   name: client
                    image: lalama1982/client
---
apiVersion: v1
# adding multiple entities
# Config for service
kind: Service
metadata:
    name:   client-srv
spec: 
    # If "type:" not defined, by default , a cluster IP service is set
    selector:
        app: client #for all pods with label "client"    
    ports: 
        -   name: client
            protocol: TCP
            port: 3000 # could be different to port the app ("client") run
            targetPort: 3000 # port in which "client" app runs
