infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name:   posts-srv
spec: 
    type: NodePort
    selector:
        app: posts #for all pods with label "posts"    
    ports: 
        -   name: posts
            protocol: TCP
            port: 4000 # could be different to port the app ("posts") run
            targetPort: 4000 # port in which "posts" app runs
