infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress-srv
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
    rules:
        -   host: posts.com
            http:
                paths:
                    -   path: /posts/create #POST : create a post
                        backend:    
                            serviceName: posts-clusterip-srv
                            servicePort: 4000          
                    -   path: /posts #GET : return all posts
                        backend:    
                            serviceName: query-srv
                            servicePort: 4002
                    -   path: /posts/?(.*)/comments #POST : create a comment
                        backend:    
                            serviceName: comments-srv
                            servicePort: 4001                           
                    -   path: /?(.*)
                        backend:    
                            serviceName: client-srv #Go to React App (page)
                            servicePort: 3000
